k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgu-portal
  namespace: lgu-portal
  labels:
    app.kubernetes.io/name: lgu-portal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: lgu-portal
